Replace run scripts with Pkl launch plans